--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,6 +56,8 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\jh\Inventory.cs" />
+    <Compile Include="Assets\jh\Sound.cs" />
     <Compile Include="Assets\jh\Save.cs" />
     <Compile Include="Assets\ub\MovingObject.cs" />
     <Compile Include="Assets\hm\Interect.cs" />
