--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,12 +64,14 @@
     <Compile Include="Assets\hm\MassageManager.cs" />
     <Compile Include="Assets\hm\Enemy.cs" />
     <Compile Include="Assets\jh\Menu.cs" />
-    <Compile Include="Assets\ub\CameraManager.cs" />
     <Compile Include="Assets\jh\Exit.cs" />
+    <Compile Include="Assets\ub\CameraManager.cs" />
+    <Compile Include="Assets\jh\Player.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
+    <None Include="Assets\jh\TMI.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
